# webknossos-wrap

./: .gitignore  LICENSE  README.md  SPECIFICATION.md  SPECIFICATION.txt  barrel.h  barrelBenchmark.m  barrelBuild.m  barrelCompress.cpp  barrelCompress.mexa64  barrelFromKnossos.m  barrelLoad.mexa64  barrelLoadRoi.m  barrelSave.cpp  barrelSave.m  barrelSave.mexa64  barrelSaveRoi.m  barrelSplitBox.m  barrelTest.m  mortonLoadRoi.m  mortonSaveRoi.m  mortonSetup.m  mortonSplitBox.m  wkwrap.h
.circleci/: config.yml
amotta-barrel/: barrelLoad.m
c/: Cargo.toml
cpp/: wkwrap.h
java/: BarrelTest.cpp
matlab/: README.md  barrelBenchmark.m  barrelBuild.m  barrelLoad.cpp  barrelSave.cpp  barrelSave.mexa64  barrelSaveRoi.m  barrelSplitBox.m  barrelTest.m  barrelTestAligned.m  liblz4.lib  wkwBenchmark.m  wkwBoundingBox.m  wkwBuild.m  wkwBuildFilePath.m  wkwCompress.cpp  wkwCompress.m  wkwCompress.mexa64  wkwCompress.mexmaci64  wkwCompress.mexw64  wkwCompressDir.m  wkwFromKnossos.m  wkwInit.m  wkwInit.mexa64  wkwInit.mexmaci64  wkwInit.mexw64  wkwLoad.cpp  wkwLoad.m  wkwLoad.mexa64  wkwLoadHeader.m  wkwLoadRoi.m  wkwLoadRoi.mexa64  wkwLoadRoi.mexmaci64  wkwLoadRoi.mexw64  wkwSave.cpp  wkwSave.m  wkwSave.mexa64  wkwSaveRoi.m  wkwSaveRoi.mexa64  wkwSaveRoi.mexmaci64  (+6 more)
matlab/rust/wkw_compress/: Cargo.toml  build.rs
matlab/rust/wkw_compress/src/: lib.rs
python/: .gitignore  Build-on-Windows.md  Dockerfile  MANIFEST.in  README.md  proto.py  setup.py  (+1 more)
rust/: Cargo.toml  README.md  build.rs
rust/src/: cached_dataset.rs  dataset.rs  file.rs  header.rs  lib.rs  lz4.rs  lz4_binding.rs  main.rs  mat.rs  morton.rs  result.rs  vec.rs  zfp.rs
(+44 files in other folders)
