[package]
name = "wkwrap"
version = "1.6.0"
authors = ["Alessandro Motta <alessandro.motta@brain.mpg.de>"]
description = "webKNOSSOS wrapper is a file format designed for large-scale, three-dimensional voxel datasets. It was optimized for high-speed access to data subvolumes, and supports multi-channel data and dataset compression."
repository = "https://github.com/scalableminds/webknossos-wrap"
license = "MIT"

[badges]
circle-ci = { repository = "scalableminds/webknossos", branch = "master" }

[dependencies]
lz4 = "1.23"

[lib]
name = "wkwrap"
path = "src/lib.rs"
